Update styling to fix header covering main & footer. Update style with flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,15 @@ h1, h2, h3 {
 header {
     background-color: #78CB54;
     color: #78CB54;
-    /* width: 100vw; */
-    padding: 0px 5px;
+    width: 100vw;
+    min-height: 90px;
+    padding: 0px 1rem;
+    position: fixed;
+    z-index: 99;
+    box-shadow: 0 2px 2px #231E24;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
@@ -57,4 +64,28 @@ header a {
     border-radius: 5px;
     padding: 0px 5px;
     margin-left: -5px;
+}
+
+/* Main */
+main {
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
+    margin-top: 90px;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Footer */
+footer {
+    background-color: #78CB54;
+    color: #78CB54;
+    width: 100vw;
+    padding: 0px 1rem;
+    position: relative;
+    z-index: 99;
+    box-shadow: 0 2px 2px #231E24;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
